added the space that the gifs would load into, still gotta get the gifs to show up but thats the next commit

--- a/index.html
+++ b/index.html
@@ -27,6 +27,16 @@
       <button type="button" class="btn btn-outline-secondary">Cardio</button>
 
 
+      <div id="addedButtons"></div>
+
+      <div class="row">
+        <div class="container">
+          <div id="loadedGifs">
+            <!-- This is where the gifs will be created on the page, -->
+          </div>
+        </div>
+      </div>
+
 
 
     <!-- Optional JavaScript -->
