notes on some of the changes that need to be made.... not quite psudo code, but kinda

--- a/index.html
+++ b/index.html
@@ -54,3 +54,6 @@
 
   </body>
 </html>
+<!-- I need to do more work on this code, as soon as the buttons are pressed on the main page, it pulls up gifs that dont relate (clearnly i didnt pay enough attention to the API here)
+and it pulls the background into a HUGE version of the original, basically zooming in on the top left corner
+also, when i press the search button it clears all of the previous text and doesnt creat a new button or search the gifs at all, just resets the button space, so i think ive got some of my wires crossed there as well. But i do think the code that i have is semi right.... its just not quite linked right yet -->
