changed the feel upon load in

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html lang="en">
   <head>
-    <title>Giphy</title>
+    <title>Do You Even Gif?</title>
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -14,20 +14,20 @@
   </head>
   <body>
           <!-- start of the Nav Bar- has search box and label to the page  -->
-    <nav class="navbar navbar-light" style="background-color:#352F1A;">
+    <nav class="navbar">
         Fitness Gifs
         <form class="form-inline">
             <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-            <button class="btn btn-outline-success my-2 my-sm-0" id="addGif" type="submit">Search</button>
+            <button class="btn my-2 my-sm-0" id="addGif" type="submit">Search</button>
             <div id="fitnessInput">
             </div>
         </form>
         <!-- creates the buttons that will be calling the Giphy API to pull a result (at some point) -->
       </nav>
-      <button type="button" class="btn btn-outline-secondary">Weights</button>
-      <button type="button" class="btn btn-outline-secondary">Stretching</button>
-      <button type="button" class="btn btn-outline-secondary">Yoga</button>
-      <button type="button" class="btn btn-outline-secondary">Cardio</button>
+      <button type="button" class="btn searchBtn">Weights</button>
+      <button type="button" class="btn searchBtn">Stretching</button>
+      <button type="button" class="btn searchBtn">Yoga</button>
+      <button type="button" class="btn searchBtn">Cardio</button>
 
 
       <div id="addedButtons"></div>
