--- a/index.html
+++ b/index.html
@@ -8,8 +8,11 @@
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.2/css/bootstrap.min.css" integrity="sha384-Smlep5jCw/wG7hdkwQ/Z5nLIefveQRIY9nfy6xoR1uRYBtpZgI6339F5dgvm/e9B" crossorigin="anonymous">
+    <!-- CSS stylesheet -->
     <link rel="stylesheet" text="text/css" href="assets/css/style.css">
+    <!-- Font CDN -->
     <link href="https://fonts.googleapis.com/css?family=Fira+Mono" rel="stylesheet">
+    <!-- jQuery CDN -->
     <script src="https://code.jquery.com/jquery-3.3.1.js" integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60=" crossorigin="anonymous"></script>
   </head>
   <body>
@@ -17,25 +20,19 @@
     <nav class="navbar">
         Fitness Gifs
         <form class="form-inline">
-            <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-            <button class="btn my-2 my-sm-0" id="addGif" type="submit">Search</button>
+            <input class="form-control mr-sm-2" id="addGif" type="text" placeholder="Search" aria-label="Search">
+            <button class="btn my-2 my-sm-0" id='searchNewGif' type="submit">Search</button>
             <div id="fitnessInput">
             </div>
         </form>
-        <!-- creates the buttons that will be calling the Giphy API to pull a result (at some point) -->
       </nav>
-      <button type="button" class="btn searchBtn">Weights</button>
-      <button type="button" class="btn searchBtn">Stretching</button>
-      <button type="button" class="btn searchBtn">Yoga</button>
-      <button type="button" class="btn searchBtn">Cardio</button>
-
-
+      <!-- Load initial content buttons -->
       <div id="addedButtons"></div>
 
       <div class="row">
         <div class="container">
+        <!-- This is where the gifs will be created on the page, -->
           <div id="loadedGifs">
-            <!-- This is where the gifs will be created on the page, -->
           </div>
         </div>
       </div>
